# rustium

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
crates/rustium-cli/: Cargo.toml  README.md
crates/rustium-cli/examples/: embed_postgresql.rs
crates/rustium-cli/src/: main.rs
crates/rustium-column-transform/: Cargo.toml  README.md
crates/rustium-column-transform/src/: lib.rs
crates/rustium-config/: Cargo.toml  README.md
crates/rustium-config/src/: debezium.rs  lib.rs
crates/rustium-core/: Cargo.toml  README.md
crates/rustium-core/src/: error.rs  event.rs  lib.rs  runtime.rs  signal.rs  traits.rs
crates/rustium-core/tests/: runtime_soak.rs
crates/rustium-debezium/: Cargo.toml  README.md
crates/rustium-debezium/src/: lib.rs  source.rs
crates/rustium-format-avro/: Cargo.toml  README.md
crates/rustium-format-avro/src/: lib.rs
crates/rustium-format-avro/tests/fixtures/: schema-mysql-create.json  schema-postgresql-create.json  schema-sqlserver-create.json
crates/rustium-format-json/: Cargo.toml  README.md
crates/rustium-format-json/src/: lib.rs
crates/rustium-format-json/tests/fixtures/: debezium-mysql-create.json  debezium-postgresql-create.json  debezium-sqlserver-create.json  schema-mysql-create.json  schema-postgresql-create.json  schema-sqlserver-create.json
crates/rustium-format-protobuf/: Cargo.toml  README.md
crates/rustium-format-protobuf/src/: lib.rs
crates/rustium-format-protobuf/tests/fixtures/: schema-mysql-create.json  schema-postgresql-create.json  schema-sqlserver-create.json
crates/rustium-mongodb/: Cargo.toml  README.md
crates/rustium-mongodb/src/: lib.rs  source.rs
crates/rustium-mongodb/tests/: mongodb_external.rs
crates/rustium-mysql/: Cargo.toml  README.md
crates/rustium-mysql/src/: column_transform.rs  file_signal.rs  lib.rs  schema_history.rs  source.rs  tls.rs
crates/rustium-mysql/tests/: mysql_docker.rs  mysql_external.rs
crates/rustium-oracle/: Cargo.toml  README.md
crates/rustium-oracle/src/: lib.rs  source.rs
crates/rustium-oracle/tests/: oracle_external.rs
crates/rustium-postgresql/: Cargo.toml  README.md
crates/rustium-postgresql/src/: column_transform.rs  file_signal.rs  incremental_snapshot.rs  lib.rs  schema_history.rs  source.rs
crates/rustium-postgresql/tests/: postgresql-extensions.Dockerfile  postgresql_external.rs
crates/rustium-server/: Cargo.toml  README.md
crates/rustium-server/src/: lib.rs
crates/rustium-signal-kafka/: Cargo.toml  README.md
crates/rustium-signal-kafka/src/: lib.rs
crates/rustium-signal-kafka/tests/: kafka_external.rs
crates/rustium-sink-kafka/: Cargo.toml  README.md
crates/rustium-sink-kafka/src/: lib.rs
crates/rustium-sink-kafka/tests/: kafka_external.rs
crates/rustium-sink-stdout/: Cargo.toml  README.md
crates/rustium-sink-stdout/src/: lib.rs
crates/rustium-sqlserver/: Cargo.toml  README.md
crates/rustium-sqlserver/src/: file_signal.rs  lib.rs  source.rs  state.rs
crates/rustium-sqlserver/tests/: sqlserver_docker.rs  sqlserver_external.rs
crates/rustium-state/: Cargo.toml  README.md
crates/rustium-state/src/: lib.rs
deploy/helm/rustium/: Chart.yaml  README.md  values.schema.json  values.yaml
deploy/helm/rustium/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  poddisruptionbudget.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: design.md  runbook.md  upgrades.md
examples/: cassandra.yaml  cockroachdb.yaml  db2.yaml  informix.yaml  mariadb.yaml  mongodb.yaml  mysql-avro.properties  mysql-json-schema.properties  mysql-protobuf.properties  mysql.properties  oracle.yaml  postgresql.yaml  spanner.yaml  sqlserver.properties  vitess.yaml  yashandb.yaml
scripts/: test-kafka-sink.sh  test-packaging.sh  test-postgresql-extensions.sh
