[workspace]
resolver = "2"
members = [
    "crates/rustium-cli",
    "crates/rustium-config",
    "crates/rustium-core",
    "crates/rustium-format-avro",
    "crates/rustium-format-json",
    "crates/rustium-format-protobuf",
    "crates/rustium-mysql",
    "crates/rustium-postgresql",
    "crates/rustium-server",
    "crates/rustium-signal-kafka",
    "crates/rustium-sqlserver",
    "crates/rustium-sink-kafka",
    "crates/rustium-sink-stdout",
    "crates/rustium-state",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/ulnit/rustium"
authors = ["Rustium Contributors"]

[workspace.dependencies]
apache-avro = "0.21.0"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
bigdecimal = "0.4.10"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
futures = "0.3.31"
hex = "0.4.3"
humantime-serde = "1.1.1"
indexmap = { version = "2.10.0", features = ["serde"] }
jks = { version = "0.3.3", default-features = false, features = ["rand"] }
mysql_async = { version = "0.37.0", default-features = false, features = ["binlog", "chrono", "default-rustls"] }
mockito = "1.7.0"
p12-keystore = "0.3.1"
pg_walstream = "0.8.0"
prometheus = "0.14.0"
prost = "0.14.4"
prost-reflect = "0.16.5"
protox-parse = "0.9.0"
rdkafka = { version = "0.39.0", features = ["cmake-build", "ssl", "sasl"] }
regex = "1.11.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
rustium-config = { version = "0.1.0-alpha.1", path = "crates/rustium-config" }
rustium-core = { version = "0.1.0-alpha.1", path = "crates/rustium-core" }
rustium-format-avro = { version = "0.1.0-alpha.1", path = "crates/rustium-format-avro" }
rustium-format-json = { version = "0.1.0-alpha.1", path = "crates/rustium-format-json" }
rustium-format-protobuf = { version = "0.1.0-alpha.1", path = "crates/rustium-format-protobuf" }
rustium-mysql = { version = "0.1.0-alpha.1", path = "crates/rustium-mysql" }
rustium-postgresql = { version = "0.1.0-alpha.1", path = "crates/rustium-postgresql" }
rustium-server = { version = "0.1.0-alpha.1", path = "crates/rustium-server" }
rustium-signal-kafka = { version = "0.1.0-alpha.1", path = "crates/rustium-signal-kafka" }
rustium-sink-kafka = { version = "0.1.0-alpha.1", path = "crates/rustium-sink-kafka" }
rustium-sink-stdout = { version = "0.1.0-alpha.1", path = "crates/rustium-sink-stdout" }
rustium-sqlserver = { version = "0.1.0-alpha.1", path = "crates/rustium-sqlserver" }
rustium-state = { version = "0.1.0-alpha.1", path = "crates/rustium-state" }
schema_registry_converter = { version = "4.10.0", default-features = false, features = ["futures", "rustls_tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlparser = "0.62.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tiberius = { version = "0.12.3", default-features = false, features = ["chrono", "rustls", "tds73"] }
tokio = { version = "1.46.1", features = ["full"] }
tokio-postgres = { version = "0.7.18", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
tokio-util = { version = "0.7.15", features = ["compat"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
