[package]
name = "rustium-cdc"
description = "Standalone Rustium CDC service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[[bin]]
name = "rustium"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
rustium-debezium.workspace = true
rustium-format-avro.workspace = true
rustium-format-json.workspace = true
rustium-format-protobuf.workspace = true
rustium-mysql.workspace = true
rustium-mongodb.workspace = true
rustium-oracle.workspace = true
rustium-postgresql.workspace = true
rustium-server.workspace = true
rustium-signal-kafka.workspace = true
rustium-sink-kafka.workspace = true
rustium-sink-stdout.workspace = true
rustium-sqlserver.workspace = true
rustium-state.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
