[package]
name = "rustium-column-transform"
description = "Shared Debezium-compatible column transformation engine for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
md-5.workspace = true
md2.workspace = true
regex.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
sha1.workspace = true
sha2.workspace = true
sha3.workspace = true

[lints]
workspace = true
