[package]
name = "rustium-config"
description = "Versioned configuration for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
humantime-serde.workspace = true
regex.workspace = true
rustium-core = { path = "../rustium-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
