[package]
name = "rustium-debezium"
description = "Durable Debezium HTTP and Kafka source bridge for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
hex.workspace = true
rdkafka.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
