[package]
name = "rustium-format-json"
description = "Rustium native and Debezium-compatible JSON encoders"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
bytes.workspace = true
chrono.workspace = true
rustium-core.workspace = true
serde_json.workspace = true

[dev-dependencies]
indexmap.workspace = true

[lints]
workspace = true
