[package]
name = "rustium-mysql"
description = "MySQL source connector for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
futures.workspace = true
indexmap.workspace = true
jks.workspace = true
mysql_async.workspace = true
p12-keystore.workspace = true
regex.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
serde_json.workspace = true
serde.workspace = true
sqlparser.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rdkafka.workspace = true
rustium-signal-kafka.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[test]]
name = "mysql_docker"
path = "tests/mysql_docker.rs"

[[test]]
name = "mysql_external"
path = "tests/mysql_external.rs"
