[package]
name = "rustium-postgresql"
description = "PostgreSQL source connector for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
indexmap.workspace = true
pg_walstream.workspace = true
regex.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rdkafka.workspace = true
rustium-signal-kafka.workspace = true
tempfile.workspace = true
tokio-postgres.workspace = true

[lints]
workspace = true

[[test]]
name = "postgresql_external"
path = "tests/postgresql_external.rs"
