[package]
name = "rustium-server"
description = "HTTP management and metrics server for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
prometheus.workspace = true
rustium-core.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
