[package]
name = "rustium-signal-kafka"
description = "Debezium-compatible Kafka signal channel for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rdkafka.workspace = true
rustium-core = { path = "../rustium-core" }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rdkafka.workspace = true

[lints]
workspace = true
