[package]
name = "rustium-sink-kafka"
description = "Kafka sink for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
rdkafka.workspace = true
rustium-core = { path = "../rustium-core" }
schema_registry_converter.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
chrono.workspace = true
mockito.workspace = true
rustium-format-json = { path = "../rustium-format-json" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true

[[test]]
name = "kafka_external"
path = "tests/kafka_external.rs"
