[package]
name = "rustium-sink-kafka"
description = "Kafka sink for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
rdkafka.workspace = true
rustium-core.workspace = true
schema_registry_converter.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
apache-avro.workspace = true
chrono.workspace = true
mockito.workspace = true
prost-reflect.workspace = true
protox-parse.workspace = true
rustium-format-avro.workspace = true
rustium-format-json.workspace = true
rustium-format-protobuf.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true

[[test]]
name = "kafka_external"
path = "tests/kafka_external.rs"
