[package]
name = "rustium-sqlserver"
description = "SQL Server CDC source connector for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
hex.workspace = true
indexmap.workspace = true
regex.workspace = true
rustium-column-transform.workspace = true
rustium-config.workspace = true
rustium-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tiberius.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rdkafka.workspace = true
rustium-signal-kafka.workspace = true
tempfile.workspace = true

[lints]
workspace = true

[[test]]
name = "sqlserver_docker"
path = "tests/sqlserver_docker.rs"

[[test]]
name = "sqlserver_external"
path = "tests/sqlserver_external.rs"
