[package]
name = "rustium-state"
description = "Checkpoint stores for Rustium"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
rusqlite.workspace = true
rustium-core.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true

[lints]
workspace = true
